poc/cluster/05-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: idp-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-local
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.idp.local"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: idp-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
