poc/cluster/06-argo-httpRoute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: idp-gateway
      namespace: default
  hostnames:
    - "argocd.idp.local"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
